# igloo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml  create_parquet.py  create_sample_parquet.py  create_test_parquet.py  generate_test_data.py  roadmap.md  rustfmt.toml  test_flight_sql_coordinator.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  python.yml  release.yml  rust.yml
api/: Cargo.toml  build.rs
api/proto/: coordinator.proto
api/src/: lib.rs
crates/api/: Cargo.toml  build.rs
crates/api/proto/: client_flight.proto  distributed.proto
crates/api/proto/arrow/flight/protocol/: auth.proto  data.proto
crates/api/src/: lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs
crates/cdc/: Cargo.toml
crates/cdc/src/: lib.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/client/tests/: flight_client_integration.rs
crates/common/: Cargo.toml
crates/common/src/: catalog.rs  error.rs  lib.rs
crates/connectors/filesystem/: Cargo.toml  test_data.csv  test_data.parquet
crates/connectors/filesystem/src/: lib.rs  parquet.rs
crates/connectors/filesystem/test_data/: sample.parquet
crates/connectors/iceberg/: Cargo.toml  README.md
crates/connectors/iceberg/src/: lib.rs
crates/connectors/iceberg/test_data/: generate_parquet_data.py  table_a.parquet
crates/connectors/iceberg/test_data/iceberg_table/data/: part-00000-example.parquet  table_b_data_001.parquet
crates/connectors/iceberg/test_data/iceberg_table/metadata/: snap-placeholder.txt  v1.metadata.json
crates/connectors/igloo-connector/: Cargo.toml
crates/connectors/igloo-connector/src/: lib.rs
crates/connectors/igloo-iceberg/: Cargo.toml
crates/connectors/igloo-iceberg/src/: lib.rs
crates/connectors/igloo-iceberg/tests/: integration_test.rs
crates/connectors/igloo-iceberg/tests/test_data/simple_iceberg_table/data/: sample1.csv
crates/connectors/igloo-iceberg/tests/test_data/simple_iceberg_table/metadata/: manifest_file_1.avro  snap-100-1-manifest-list.avro  v1.metadata.json
crates/connectors/mysql/: Cargo.toml
crates/connectors/mysql/src/: lib.rs
crates/connectors/postgres/: Cargo.toml
crates/connectors/postgres/src/: lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/config/: default.toml
crates/coordinator/src/: catalog.rs  config.rs  distributed_executor.rs  distributed_planner.rs  error.rs  flight.rs  flight_sql_service.rs  fragment.rs  lib.rs  main.rs  planner.rs  scheduler.rs  service.rs  stage.rs
crates/coordinator/tests/: catalog.rs  cluster_lifecycle.rs  coordinator_catalog_tests.rs  flight_server_integration.rs  flight_sql_integration.rs  integration_tests.rs  test_planner.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  logical_plan.rs  parser.rs  physical_plan.rs  physical_planner.rs  planner.rs
crates/engine/src/operators/: filter.rs  hash_join.rs  mod.rs  parquet_scan.rs  projection.rs
crates/engine/tests/: integration_test.rs  integration_tests.rs
crates/igloo/: Cargo.toml
crates/igloo-core/: Cargo.toml
crates/igloo-core/src/: error.rs  lib.rs  operator.rs
crates/igloo-filter/: Cargo.toml
crates/igloo-filter/src/: lib.rs
crates/igloo-limit/: Cargo.toml
crates/igloo-limit/src/: lib.rs
crates/igloo-project/: Cargo.toml
crates/igloo-project/src/: lib.rs
crates/igloo-sql/: Cargo.toml
crates/igloo-sql/src/: lib.rs  plan.rs  planner.rs
crates/igloo/engine/datafusion_engine/: README.md  __init__.py
crates/igloo/src/: lib.rs  main.rs
crates/sql/: Cargo.toml
crates/sql/src/: lib.rs  logical_plan.rs  planner.rs
crates/sql/tests/: planner.rs
crates/worker/: Cargo.toml
crates/worker/config/: default.toml
crates/worker/src/: config.rs  error.rs  lib.rs  main.rs  service.rs
data/: sample.parquet
data/iceberg_table/data/: .keep
pyigloo/: Cargo.toml  __init__.py  client.py  pyproject.toml  requirements.txt
pyigloo/src/: lib.rs
pyigloo/tests/: test_client.py  test_flight_client.py  test_polars_join.py
python/pyigloo/: Cargo.toml  __init__.py  pyproject.toml
python/pyigloo/src/: lib.rs
scripts/: build.sh  check.sh  formatting.sh  setup.sh  validate.sh
