[workspace]
members = [
    "crates/api",
    "crates/client",
    "crates/coordinator",
    "crates/worker",
    "crates/engine",
    "crates/cache",
    "crates/cdc",
    "crates/common",
    "crates/connectors/postgres",
    "crates/connectors/mysql",
    "crates/connectors/filesystem",
    "pyigloo"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
