[package]
name = "igloo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
arrow-flight = { version = "50.0.0", features = ["flight-sql"] }
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"
