[package]
name = "igloo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
arrow-flight = { version = "55.1.0", features = ["flight-sql-experimental"] }
futures = "0.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
