[package]
name = "igloo-api"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "API definitions (Protobuf, Flight) for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = true

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
arrow-flight = "55.1.0"
futures = "0.3"
tokio-stream = "0.1"
igloo-engine = { path = "../engine" }
datafusion = "48.0.0"
arrow = "55.1.0"
igloo-common = { version = "0.1.0", path = "../common" }

[build-dependencies]
tonic-build = "0.12"
