[package]
name = "igloo-cache"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Caching layer for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = true

[dependencies]
arrow = { version = "55.1.0", features = ["prettyprint"] }
igloo-common = { path = "../common" }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[features]
default = ["in-memory"]
# Optional in-memory cache backend
in-memory = []
