[package]
name = "igloo-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "55.1.0", features = ["prettyprint"] }
igloo-common = { path = "../common" }
tracing = "0.1"
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[features]
default = ["in-memory"]
# Optional in-memory cache backend
in-memory = []
