[package]
name = "igloo-cache"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Caching layer for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-io/igloo"
publish = true

[dependencies]
arrow = { version = "55.1.0", features = ["prettyprint"] }
igloo-common = { path = "../common" }
tracing = "0.1"
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[features]
default = ["in-memory"]
# Optional in-memory cache backend
in-memory = []
