[package]
name = "igloo-cdc"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Change Data Capture (CDC) components for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = true

[dependencies]
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
