[package]
name = "igloo-client"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Client for interacting with the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = true

[dependencies]
igloo-api = { path = "../api" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
