[package]
name = "igloo-common"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Common utilities and types for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0"
sqlparser = "0.56.0"
datafusion = "48.0.0"
