[package]
name = "igloo-coordinator"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Coordinator component for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-io/igloo"
publish = true

[dependencies]
igloo-api = { path = "../api" }
igloo-common = { path = "../common" }
igloo-engine = { path = "../engine" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
chrono = "0.4"
datafusion = "48.0.0"
igloo-connector-filesystem = { path = "../connectors/filesystem" }
object_store = "0.9"
arrow-flight = "55.1.0"
dashmap = "5.5" # For concurrent hash maps
arrow-schema = "55.1.0" # For SchemaRef
