[package]
name = "igloo-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-array = "55.1.0"
arrow-flight = "55.1.0"
arrow-schema = "55.1.0"
arrow-ipc = "55.1.0"
chrono = "0.4"
datafusion = "48.0.0"
igloo-api = { path = "../api" }
igloo-common = { path = "../common" }
igloo-connector-filesystem = { path = "../connectors/filesystem" }
igloo-engine = { path = "../engine" }
object_store = "0.9"
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
futures = "0.3"
tokio-stream = "0.1"
