[package]
name = "igloo-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlparser = "0.56.0"
async-trait = "0.1.77"
thiserror = "1.0"
