[package]
name = "igloo-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlparser = "0.56.0" # This was existing, keep it for now, might remove later if DataFusion makes it redundant.
datafusion = "47.0.0"
# arrow dependency removed for now
