[package]
name = "igloo-engine"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Query engine core for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = false # Cannot be published due to local path dependencies (datafusion_engine)

[dependencies]
# datafusion_engine = { path = "../igloo/engine/datafusion_engine" } # This is the problematic local path
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlparser = "0.56.0" # This was existing, keep it for now, might remove later if DataFusion makes it redundant.
datafusion = "48.0.0"
# arrow dependency removed for now
