[package]
name = "igloo-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "55.1.0", features = ["prettyprint"] }
futures = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
