[package]
name = "igloo-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
igloo-core = { path = "../igloo-core" }
apache-arrow = { version = "52.0.0", features = ["compute"] }
datafusion-expr = "38.0.0"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"

[dev-dependencies]
arrow-schema = "52.0.0"
arrow-array = "52.0.0"
