[package]
name = "igloo-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-api = { path = "../../api" }
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
config = { version = "0.13", features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }
backoff = { version = "0.4", features = ["tokio"] }
thiserror = "1.0"
