[package]
name = "igloo-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-api = { path = "../../api" }
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
bincode = "1.3.3"
