[package]
name = "igloo-worker"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Worker component for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-project/igloo-query-engine"
publish = true

[dependencies]
igloo-api = { path = "../api" }
igloo-common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
