[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyigloo"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"] # Version will be taken from Cargo.toml

[tool.maturin]
features = ["pyo3/extension-module"]
# bindings = "pyo3" # Optional: Or use `module-name` in Cargo.toml [lib]
