[package]
name = "igloo-connector-filesystem"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-common = { path = "../../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Added dependencies
igloo-connector = { path = "../igloo-connector", version = "0.1.0" }
arrow = "35.0.0"
parquet = "35.0.0"
async-trait = "0.1"
futures = "0.3"
# half = "2.4.0" # Removed from here, rely on workspace pin
