[package]
name = "igloo-connector-filesystem"
version = "0.1.0"
edition = "2021"
authors = ["Igloo Team <team@example-igloo.com>"]
description = "Filesystem connector for the Igloo Query Engine."
license = "Apache-2.0"
repository = "https://github.com/igloo-io/igloo"
publish = true

[dependencies]
csv = "1.3"
igloo-common = { path = "../../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
