[package]
name = "igloo-iceberg"
version = "0.1.0"
edition = "2021"

[dependencies]
iceberg-rust = { version = "0.3" } # Rely on its default features
object_store = { version = "0.7" } # Rely on its default features
datafusion = { version = "34.0", features = ["parquet"] } # Use the latest appropriate version, align with Igloo's DataFusion
tokio = { version = "1", features = ["full"] } # Main tokio, used by iceberg-rust and potentially other parts
arrow = "49.0" # Align with DataFusion's Arrow version

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1", features = ["v4"] }
csv = "1.3"
chrono = "0.4.31" # Pinned to an older patch version
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # For test runner
# datafusion and iceberg-rust are in main [dependencies] with required features
